[package]
name = "sidevm-emscripten"
version = "2.2.1"
description = "Emscripten implementation library for Phala sidevm WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "abi", "emscripten", "posix"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
lazy_static = "1.4"
libc = "^0.2"
log = "0.4"
time = { version = "0.2", features = ["std"] }
wasmer = { version = "=2.2.1", default-features = false, features = ["sys"] }
rand = "0.8.5"
